// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expression with all props match snapshot 1`] = `
Array [
  Object {
    "node": <p>
      foo
    </p>,
    "path": "$#Expression.children::0",
    "type": "unit",
    "value": Object {
      "apiPath": "me/messages",
      "params": Object {
        "message": Object {
          "text": "foo",
        },
        "messaging_type": "MESSAGE_TAG",
        "notification_type": "SILENT_PUSH",
        "persona_id": "_PERSONA_ID_",
        "tag": "CONFIRMED_EVENT_UPDATE",
      },
      "type": "message",
    },
  },
  Object {
    "node": "bar",
    "path": "$#Expression.children::1",
    "type": "unit",
    "value": Object {
      "apiPath": "me/messages",
      "params": Object {
        "message": Object {
          "metadata": "_MY_METADATA_",
          "quick_replies": Array [
            Object {
              "content_type": "text",
              "image_url": undefined,
              "payload": "bar",
              "title": "foo",
            },
            Object {
              "content_type": "user_phone_number",
            },
            Object {
              "content_type": "user_email",
            },
          ],
          "text": "bar",
        },
        "messaging_type": "MESSAGE_TAG",
        "notification_type": "SILENT_PUSH",
        "persona_id": "_PERSONA_ID_",
        "tag": "CONFIRMED_EVENT_UPDATE",
      },
      "type": "message",
    },
  },
]
`;

exports[`Expression with break, pause and thunk in children match snapshot 1`] = `
Array [
  Object {
    "node": <p>
      foo
    </p>,
    "path": "$#Expression.children:0",
    "type": "unit",
    "value": Object {
      "apiPath": "me/messages",
      "params": Object {
        "message": Object {
          "text": "foo",
        },
        "messaging_type": undefined,
        "notification_type": undefined,
        "persona_id": undefined,
        "tag": undefined,
      },
      "type": "message",
    },
  },
  Object {
    "node": "bar",
    "path": "$#Expression.children:1",
    "type": "unit",
    "value": Object {
      "apiPath": "me/messages",
      "params": Object {
        "message": Object {
          "text": "bar",
        },
        "messaging_type": undefined,
        "notification_type": undefined,
        "persona_id": undefined,
        "tag": undefined,
      },
      "type": "message",
    },
  },
  Object {
    "node": <Sociably.Pause
      time={2000}
    />,
    "path": "$#Expression.children:2",
    "type": "pause",
    "value": [Function],
  },
  Object {
    "node": "baz",
    "path": "$#Expression.children:3",
    "type": "unit",
    "value": Object {
      "apiPath": "me/messages",
      "params": Object {
        "message": Object {
          "metadata": undefined,
          "quick_replies": undefined,
          "text": "baz",
        },
        "messaging_type": undefined,
        "notification_type": undefined,
        "persona_id": undefined,
        "tag": undefined,
      },
      "type": "message",
    },
  },
  Object {
    "node": <Sociably.Thunk
      effect={[Function]}
    />,
    "path": "$#Expression.children:4",
    "type": "thunk",
    "value": [Function],
  },
]
`;

exports[`Expression with metadata match snapshot 1`] = `
Array [
  Object {
    "node": <p>
      foo
    </p>,
    "path": "$#Expression.children::0",
    "type": "unit",
    "value": Object {
      "apiPath": "me/messages",
      "params": Object {
        "message": Object {
          "text": "foo",
        },
        "messaging_type": undefined,
        "notification_type": undefined,
        "persona_id": undefined,
        "tag": undefined,
      },
      "type": "message",
    },
  },
  Object {
    "node": "bar",
    "path": "$#Expression.children::1",
    "type": "unit",
    "value": Object {
      "apiPath": "me/messages",
      "params": Object {
        "message": Object {
          "metadata": "_SOME_METADATA_",
          "quick_replies": undefined,
          "text": "bar",
        },
        "messaging_type": undefined,
        "notification_type": undefined,
        "persona_id": undefined,
        "tag": undefined,
      },
      "type": "message",
    },
  },
]
`;

exports[`Expression with notificationType match snapshot 1`] = `
Array [
  Object {
    "node": <p>
      foo
    </p>,
    "path": "$#Expression.children::0",
    "type": "unit",
    "value": Object {
      "apiPath": "me/messages",
      "params": Object {
        "message": Object {
          "text": "foo",
        },
        "messaging_type": undefined,
        "notification_type": "NO_PUSH",
        "persona_id": undefined,
        "tag": undefined,
      },
      "type": "message",
    },
  },
  Object {
    "node": "bar",
    "path": "$#Expression.children::1",
    "type": "unit",
    "value": Object {
      "apiPath": "me/messages",
      "params": Object {
        "message": Object {
          "metadata": undefined,
          "quick_replies": undefined,
          "text": "bar",
        },
        "messaging_type": undefined,
        "notification_type": "NO_PUSH",
        "persona_id": undefined,
        "tag": undefined,
      },
      "type": "message",
    },
  },
]
`;

exports[`Expression with personaId match snapshot 1`] = `
Array [
  Object {
    "node": <p>
      foo
    </p>,
    "path": "$#Expression.children::0",
    "type": "unit",
    "value": Object {
      "apiPath": "me/messages",
      "params": Object {
        "message": Object {
          "text": "foo",
        },
        "messaging_type": undefined,
        "notification_type": undefined,
        "persona_id": "_PERSONA_ID_",
        "tag": undefined,
      },
      "type": "message",
    },
  },
  Object {
    "node": "bar",
    "path": "$#Expression.children::1",
    "type": "unit",
    "value": Object {
      "apiPath": "me/messages",
      "params": Object {
        "message": Object {
          "metadata": undefined,
          "quick_replies": undefined,
          "text": "bar",
        },
        "messaging_type": undefined,
        "notification_type": undefined,
        "persona_id": "_PERSONA_ID_",
        "tag": undefined,
      },
      "type": "message",
    },
  },
]
`;

exports[`Expression with quickReplies match snapshot 1`] = `
Array [
  Object {
    "node": <p>
      foo
    </p>,
    "path": "$#Expression.children::0",
    "type": "unit",
    "value": Object {
      "apiPath": "me/messages",
      "params": Object {
        "message": Object {
          "text": "foo",
        },
        "messaging_type": undefined,
        "notification_type": undefined,
        "persona_id": undefined,
        "tag": undefined,
      },
      "type": "message",
    },
  },
  Object {
    "node": "bar",
    "path": "$#Expression.children::1",
    "type": "unit",
    "value": Object {
      "apiPath": "me/messages",
      "params": Object {
        "message": Object {
          "metadata": undefined,
          "quick_replies": Array [
            Object {
              "content_type": "text",
              "image_url": undefined,
              "payload": "bar",
              "title": "foo",
            },
            Object {
              "content_type": "user_phone_number",
            },
            Object {
              "content_type": "user_email",
            },
          ],
          "text": "bar",
        },
        "messaging_type": undefined,
        "notification_type": undefined,
        "persona_id": undefined,
        "tag": undefined,
      },
      "type": "message",
    },
  },
]
`;

exports[`Expression with type and tag match snapshot 1`] = `
Array [
  Object {
    "node": <p>
      foo
    </p>,
    "path": "$#Expression.children::0",
    "type": "unit",
    "value": Object {
      "apiPath": "me/messages",
      "params": Object {
        "message": Object {
          "text": "foo",
        },
        "messaging_type": "MESSAGE_TAG",
        "notification_type": undefined,
        "persona_id": undefined,
        "tag": "ACCOUNT_UPDATE",
      },
      "type": "message",
    },
  },
  Object {
    "node": "bar",
    "path": "$#Expression.children::1",
    "type": "unit",
    "value": Object {
      "apiPath": "me/messages",
      "params": Object {
        "message": Object {
          "metadata": undefined,
          "quick_replies": undefined,
          "text": "bar",
        },
        "messaging_type": "MESSAGE_TAG",
        "notification_type": undefined,
        "persona_id": undefined,
        "tag": "ACCOUNT_UPDATE",
      },
      "type": "message",
    },
  },
]
`;

exports[`Expression with type match snapshot 1`] = `
Array [
  Object {
    "node": <p>
      foo
    </p>,
    "path": "$#Expression.children::0",
    "type": "unit",
    "value": Object {
      "apiPath": "me/messages",
      "params": Object {
        "message": Object {
          "text": "foo",
        },
        "messaging_type": "UPDATE",
        "notification_type": undefined,
        "persona_id": undefined,
        "tag": undefined,
      },
      "type": "message",
    },
  },
  Object {
    "node": "bar",
    "path": "$#Expression.children::1",
    "type": "unit",
    "value": Object {
      "apiPath": "me/messages",
      "params": Object {
        "message": Object {
          "metadata": undefined,
          "quick_replies": undefined,
          "text": "bar",
        },
        "messaging_type": "UPDATE",
        "notification_type": undefined,
        "persona_id": undefined,
        "tag": undefined,
      },
      "type": "message",
    },
  },
]
`;
